--- a/package.json
+++ b/package.json
@@ -16,21 +16,21 @@
   "author": "imorente",
   "license": "MIT",
   "devDependencies": {
-    "babel-loader": "^7.1.4",
-    "concurrently": "^3.5.1",
-    "dotenv": "^5.0.1",
-    "extract-loader": "^2.0.1",
-    "file-loader": "^1.1.11",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "markdown-magic": "^0.1.25",
-    "netlify-lambda": "^0.4.0",
-    "node-fetch": "^2.1.2",
-    "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.3.1"
+    "babel-loader": "8.0.6",
+    "concurrently": "4.1.1",
+    "dotenv": "8.0.0",
+    "extract-loader": "3.1.0",
+    "file-loader": "4.2.0",
+    "html-loader": "0.5.5",
+    "html-webpack-plugin": "3.2.0",
+    "markdown-magic": "0.1.25",
+    "netlify-lambda": "1.6.0",
+    "node-fetch": "2.6.0",
+    "webpack": "4.39.2",
+    "webpack-cli": "3.3.6",
+    "webpack-dev-server": "3.8.0"
   },
   "dependencies": {
-    "normalize.css": "^8.0.0"
+    "normalize.css": "8.0.1"
   }
 }
